--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -1,9 +1,13 @@
-.alldiv {
+.profile-cont {
     margin-bottom:0rem;
 	margin-left: 0rem;
     margin-top: -0.5rem;
 	width: 100%;
-	height: 80vh;
+	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),  url(../images/bg-3.jpg);
+	height: 110vh;
+	background-size: cover;
+	background-position: 50% 80%;
+	background-repeat:no-repeat;
 	justify-content:center;
 	text-align:center;
 	font-weight:bold;
@@ -11,9 +15,28 @@
 }
 
 
-.update-profile {
-	width: 30%;
-    margin-left: 47%;
+.update-profile
+{
+	padding: 0.7rem 0.7rem;
+	color: white;
+	text-decoration:none;
+	font-size: 1rem;
+	text-transform:uppercase;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width:10rem;
+    height: 3.7rem;
+	position:absolute;
+    margin-left:  30%;
+    margin-top: 20%;
+	
 }
 
+.profile-card {
+	width: 30rem;
+	height: 12rem;
+	left: 30%;
+	top: 26%;
+}
 
