--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -1,9 +1,13 @@
-.alldiv {
+.signup-cont {
     margin-bottom:0rem;
 	margin-left: 0rem;
     margin-top: -0.5rem;
 	width: 100%;
-	height: 80vh;
+	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),  url(../images/bg-5.jpg);
+	height: 110vh;
+	background-size: cover;
+	background-position: 50% 80%;
+	background-repeat:no-repeat;
 	justify-content:center;
 	text-align:center;
 	font-weight:bold;
@@ -11,8 +15,11 @@
 }
 
 .signup-card {
-    width: 30%;
-    margin-left: 36%;
+	width: 30%;
+	height: 75%;
+	margin-left: 36%;
+	text-align:left;
+	top: 3%;
 }
 
 .signup-btn {
